src/sass/partials/_home.scss
.home-wrapper {
    margin: ($base-size * 3.5) auto;
    padding: ($base-size * 6) ($base-size * 4);
    background: $color-light;
    border-bottom: 1px solid lighten($color-dark, 70%);
    border-radius: $radius;
    text-align: center; // Wyśrodkowanie tekstu w sekcji
  }

//NAVIGATION
.row {
    display: flex;
    flex-direction: row;
  }
  
  .item {
    position: relative;
    width: 100px;
    height: 100px;
    background-color: #ff6b6b;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-right: 10px;
    margin-bottom: 10px;
    flex-grow: 1;
    overflow: hidden;
    transition: all 0.5s; // Dodajemy płynne przejścia
    
    a {
        text-decoration: none;
        color: #fff;
    }
    img {
      max-width: 100%;
      height: 100%;
      object-fit: cover;
    }
  
    .item-description {
      .title {
        position: absolute;
        top: 30%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 100%;
        transition: all 0.5s; // Dodajemy płynne przejścia
      }
  
      p {
        position: absolute;
        top: 100%; // Początkowa pozycja opisu pod elementem
        left: 50%;
        transform: translateX(-50%);
        width: 100%;
        opacity: 0; // Ukrywamy opis przez zmniejszenie przezroczystości
        transition: all 0.5s;
      }
    }
  
    &:hover {
      .item-description {
        .title {
          top: 10%;
        }
  
        p {
          top: 50%; // Nowa pozycja opisu po najechaniu myszką
          opacity: 1; //zwiększenie przeźroczystości
        }
      }
    }
  }

//CAROUSEL
.main-carousel {
    margin-top: 100px;
    margin-bottom: 100px;
  }
  
  .carousel-cell {
    .slide-content {
      display: flex;
      align-content: center;
      height: 310px;
      
      
      .reviews {
        text-align: left;
        align-self: center;
        margin-left: 50px;
        margin-right: 10px;

        .author {
            font-style: italic;
        }
      }

      img {
        margin-left: 5px;
        max-width: 40%;
        height: 100%;
        align-self: center;
        
      }
    }
  }

//GALLERY 
.gallery {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 100px;
    
    .photo {
      position: relative;
      width: calc(33.33% - 10px); /* 10px marginesu na prawo i lewo */
      margin: 5px; /* Odstęp między zdjęciami */
      height: 200px;
      overflow: hidden;
      
      img {
        width: 100%;
        height: 100%;
      }
      
      .clicks {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        cursor: pointer;
        transition: transform 0.3s;
        bottom: 0;
        display: flex;
        justify-content: center;
        align-items: center;

        i {
          font-size: 24px;
          color: white;
          margin: 0 10px;

          &:hover{
            color: red;
          }
        }
      }

      &:hover .clicks {
        transform: scale(1.5);
        background: #ffffff61;
      
      }
    }
  }

  //end message
  .end-message{
    text-align: left;
   
    a{
      color: #ff6b6b;
    }
  }

